--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "axios": "^1.3.4",
     "oh-vue-icons": "^1.0.0-rc3",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-axios": "^3.5.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
